hint button no longer covers selection borders

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body {
 
 .card.selected {
     border: 6px solid black;
+    outline: none !important;
 }
 
 #message-container {
